# Assigment

./: .gitignore  CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  Elevator.cpp  Elevator.h  Floor.cpp  Floor.h  Makefile.txt  Manager.cpp  Manager.h  README.md  TestAssignment.cpp  TestAssignment.sln  TestAssignment.vcxproj  TestAssignment.vcxproj.filters  Utils.cpp  Utils.h
